--- a/workspace/Parameters/res/layout/record_add.xml
+++ b/workspace/Parameters/res/layout/record_add.xml
@@ -30,7 +30,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="34.45"
+	                
 	          />
 	      
 	      <TextView android:text="Ammonia"
@@ -67,7 +67,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Biochemical"
@@ -104,7 +104,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Chloride"
@@ -144,7 +144,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="colorimeter"
@@ -181,7 +181,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Conductivity"
@@ -219,7 +219,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Dissolved Oxygen"
@@ -255,7 +255,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Free Chlorine"
@@ -296,7 +296,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Nitrate"
@@ -334,7 +334,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Orp Redox"
@@ -372,7 +372,7 @@ android:layout_height="fill_parent" >
 	                android:layout_height="wrap_content"
 	                android:textColor="#ffffff"
 	                android:textSize="15dp"
-	                android:text="44.45"
+	                android:text=""
 	          />
 	      
 	      <TextView android:text="Ph"
