--- a/workspace/Parameters/res/layout/view_record.xml
+++ b/workspace/Parameters/res/layout/view_record.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+	 <LinearLayout
+	     android:layout_width="fill_parent"
+	     android:layout_height="35dp"
+	     android:orientation="horizontal"
+	     android:background="@color/lightblue" >
+	     <ImageView 
+	         android:layout_width="wrap_content"
+	         android:layout_height="30dp"
+	         android:layout_marginLeft="250dp"
+	         android:layout_gravity="center"
+	         android:src="@drawable/android_calender"
+	         android:onClick="calendar"
+	         />
+	     
+	 </LinearLayout>
+<ScrollView 
 android:id="@+id/ScrollView01" android:layout_width="fill_parent"
 android:layout_height="fill_parent" >
 <RelativeLayout 
@@ -393,3 +412,4 @@ android:layout_height="fill_parent" >
        />   
 </RelativeLayout>
 </ScrollView>
+</LinearLayout>
