--- a/workspace/Parameters/res/layout/manage_location.xml
+++ b/workspace/Parameters/res/layout/manage_location.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
         <ListView
-            android:id="@+id/unique"
+            android:id="@+id/locations_list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
