--- a/workspace/Parameters/res/layout/activity_add_parameter_value.xml
+++ b/workspace/Parameters/res/layout/activity_add_parameter_value.xml
@@ -6,13 +6,22 @@
     android:background="#ffffff"
     tools:context=".AddParameterValueActivity" >
 
-    <TextView
+    <!--  TextView
         android:id="@+id/slider"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
-        android:text="@string/hello_world" />
+        android:text="@string/hello_world" />-->
+    <TextView 
+        android:id="@+id/instruction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
+        android:textSize="20dp"
+        android:textColor="#00BFFF"
+        />
      <TextView android:id="@+id/slider_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
@@ -23,7 +32,8 @@
     <SeekBar android:id="@+id/seekbar"
 android:layout_width="300dp"
 android:layout_height="wrap_content"
-android:max="50"
+android:max="100"
+android:progress="1"
 android:layout_gravity="center_horizontal"
 android:layout_marginTop="10dp"
 android:minWidth="250px"  />
