--- a/workspace/Parameters/res/layout/activity_main.xml
+++ b/workspace/Parameters/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         >
       <TextView  android:text="Aqua Trac"
                  android:textSize="35dp"
-                 android:textColor="#0000FF"
+                 android:textColor="#00BFFF"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="20dp"
