commited for nexus4 layout settings

--- a/workspace/Parameters/res/layout/activity_add.xml
+++ b/workspace/Parameters/res/layout/activity_add.xml
@@ -42,6 +42,7 @@
                android:horizontalSpacing="20dp"
                android:stretchMode="none"
                android:layout_marginTop="15dp"
+               android:layout_marginLeft="30dp"
                android:gravity="center"/>
 
 </LinearLayout>
