--- a/workspace/Parameters/res/layout/manage_location_list_element.xml
+++ b/workspace/Parameters/res/layout/manage_location_list_element.xml
@@ -5,19 +5,25 @@
     android:orientation="horizontal" 
     >
 
+   
+
+    <CheckBox
+        android:id="@+id/location_checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/location_textView"
+        android:layout_alignParentLeft="true"
+        />
+
     <TextView
         android:id="@+id/location_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
-
-    <ImageButton
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:height="30dp"
         android:layout_alignParentTop="true"
-        android:src="@drawable/minus_button_green" 
-        android:onClick="onSingleDelete"/>
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/location_checkBox"
+        android:text="asdfds" />
 
 </RelativeLayout>
