--- a/workspace/Parameters/res/layout/manage_parameter_list.xml
+++ b/workspace/Parameters/res/layout/manage_parameter_list.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/parameters_list"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-</ListView>
+    <ListView
+        android:id="@+id/parameters_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/parameter_done_button"
+        android:choiceMode="multipleChoice" />
+
+    <Button
+        android:id="@+id/parameter_done_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:width="150dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/custom_button_transparent"
+        android:text="@+string/done"
+        android:onClick="onDone"
+         />
+
+</RelativeLayout>
