--- a/workspace/Parameters/res/layout/manage_parameter_list_element.xml
+++ b/workspace/Parameters/res/layout/manage_parameter_list_element.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/parameter_textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/parameter_imageButton" />
+        android:layout_toLeftOf="@+id/parameter_imageButton"
+        android:layout_marginLeft="50dp"
+        android:orientation="vertical" >
 
-    <ImageButton
-        android:id="@+id/parameter_imageButton"
+        <TextView
+            android:id="@+id/parameter_textView"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/parameter_range_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+             android:layout_marginBottom="10dp"
+            android:text="TextView" />
+    </LinearLayout>
+
+    <RadioButton
+        android:id="@+id/parameter_radioButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/edit_button_blue" 
-        android:onClick="onSingleEdit"/>
+        android:layout_marginTop="16dp"
+        android:onClick="onClickRadioButton" />
 
 </RelativeLayout>
