--- a/workspace/Parameters/res/layout/record_add.xml
+++ b/workspace/Parameters/res/layout/record_add.xml
@@ -8,10 +8,18 @@
 	     android:layout_height="35dp"
 	     android:orientation="horizontal"
 	     android:background="@color/lightblue" >
+	     <TextView 
+	         android:id="@+id/date_text"
+	         android:layout_width="wrap_content"
+	         android:layout_height="wrap_content"
+	         android:layout_marginLeft="5dp"
+	         android:textColor="#ffffff"
+	         android:textSize="25dp"
+	         />
 	     <ImageView 
 	         android:layout_width="wrap_content"
 	         android:layout_height="30dp"
-	         android:layout_marginLeft="300dp"
+	         android:layout_marginLeft="200dp"
 	         android:layout_gravity="center"
 	         android:src="@drawable/android_calender"
 	         android:onClick="calendar"
