commited for landscape mode restriction

--- a/workspace/Parameters/res/layout/view_record.xml
+++ b/workspace/Parameters/res/layout/view_record.xml
@@ -38,7 +38,7 @@ android:layout_height="fill_parent" >
        <RelativeLayout android:id="@+id/ammonia"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF"
+          android:background="@color/lightblue"
           android:layout_marginLeft="12.5dp"
           android:layout_marginTop="25dp"
            >
@@ -82,7 +82,7 @@ android:layout_height="fill_parent" >
           android:layout_toRightOf="@id/ammonia"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF"
+          android:background="@color/lightblue"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="25dp" >
@@ -126,7 +126,7 @@ android:layout_height="fill_parent" >
  <RelativeLayout android:id="@+id/chloride"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF"
+          android:background="@color/lightblue"
           android:layout_marginLeft="12.5dp"
           android:layout_marginTop="10dp"
           android:layout_below="@id/ammonia" >
@@ -173,7 +173,7 @@ android:layout_height="fill_parent" >
           android:layout_below="@id/biochemical"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF" 
+          android:background="@color/lightblue" 
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="10dp" >
@@ -219,7 +219,7 @@ android:layout_height="fill_parent" >
     <RelativeLayout android:id="@+id/conductivity"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF"
+          android:background="@color/lightblue"
           android:layout_marginLeft="12.5dp"
           android:layout_marginTop="10dp"
           android:layout_below="@id/chloride" >
@@ -267,7 +267,7 @@ android:layout_height="fill_parent" >
           android:layout_below="@id/colorimeter"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF" 
+          android:background="@color/lightblue"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="10dp" >
@@ -310,7 +310,7 @@ android:layout_height="fill_parent" >
     <RelativeLayout android:id="@+id/free_chlorine"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF"
+          android:background="@color/lightblue"
           android:layout_marginLeft="12.5dp"
           android:layout_marginTop="10dp"
           android:layout_below="@id/conductivity" >
@@ -357,7 +357,7 @@ android:layout_height="fill_parent" >
           android:layout_below="@id/dissolved_oxygen"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF" 
+          android:background="@color/lightblue" 
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="10dp" >
@@ -403,7 +403,7 @@ android:layout_height="fill_parent" >
     <RelativeLayout android:id="@+id/orp"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF"
+          android:background="@color/lightblue"
           android:layout_marginLeft="12.5dp"
           android:layout_marginTop="10dp"
           android:layout_below="@id/free_chlorine" >
@@ -449,7 +449,7 @@ android:layout_height="fill_parent" >
           android:layout_below="@id/nitrate"
           android:layout_width="175dp"
           android:layout_height="150dp"
-          android:background="#1E90FF" 
+          android:background="@color/lightblue" 
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_marginTop="10dp" >
